--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 </head>
 
 
-<link rel="shortcut icon" href="images/TinyBox_icon_01.png" type="image/x-icon" />
+<link rel="shortcut icon" href="images/TinyBox_icon_01.png" type="image/x-icon"/>
 
 <body>
-    <img src="images/TinyBox_logo.png" alt="TinyBox.studios" class="mainlogo">
+    <img src="images/TinyBox_logo_alpha_01.png" alt="TinyBox.studios" class="mainlogo">
     <h1 class="center">Site Under Construction...</h1>
 
 
