--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 </head>
 
 
-<link rel="shortcut icon" href="images/TinyBox_icon_01.png" type="image/x-icon"/>
+<link rel="shortcut icon" href="images/tinybox_logo_noText.png" type="image/x-icon"/>
 
 <body>
-    <img src="images/TinyBox_logo_alpha_01.png" alt="TinyBox.studios" class="mainlogo">
-    <h1 class="center">Site Under Construction...</h1>
+    <img src="images/tinybox_logo_Transparent.png" alt="TinyBox.studios" class="mainlogo">
+    <h1 class="center">coming soon</h1>
 
 
     <!-- Bootstrap core JavaScript
